--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </style>
     <script>
         function showMessage() {
-            alert('Fuck you brooooo!');
+            alert('Fuck you brooooo:P');
         }
     </script>
 
